tests/sources/invalid/classes/instance_method_unknown.fire
// Semantic error: calling an unknown method on a class instance.

class Counter {
    value: int32;

    fn Counter(value: int32) {
        this.value = value;
    }
}

fn instance_method_unknown() -> void {
    c: Counter = new Counter(0);
    c.frobnicate();  //~ ERROR FS-SEM-0010 @5
}
